# vlabor_agent

./: .gitignore  CLAUDE.md  README.md
chat_backend/: README.md  pyproject.toml  run
chat_backend/chat_backend/: __init__.py  chat_loop.py  config.py  devpage.py  keys.py  mcp_pool.py  server.py  storage.py  user_settings.py  voice.py
chat_backend/chat_backend/providers/: __init__.py  anthropic_provider.py  base.py  openai_provider.py
docker/: Dockerfile
docs/design/: bt_state_protocol.md  overview.md  voice_chat.md
